change bot token

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=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
+BOT_TOKEN=5273972216:AAFw8Qs3MnY33zO0LQEAehI9t8UoLD7shjk
 AI_API_KEY=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
