add sarcastic bot

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+# @tohirbot_bot
 BOT_TOKEN=5273972216:AAFw8Qs3MnY33zO0LQEAehI9t8UoLD7shjk
+
+# @oinBot
+#BOT_TOKEN=542668126:AAHFkgn4fmNuVo3Y_MfgLx1TS9kjbJ8lD6Y
 AI_API_KEY=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
